--- a/index.html
+++ b/index.html
@@ -3,15 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Book Haven - Your Online Bookshop</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Home</title>
 </head>
 <body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <h1>Welcome to My Project</h1>
+    <!-- Navigation Bar -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#categories">Categories</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Homepage Banner -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Welcome to Book Haven!</h1>
+            <p>Your favorite online bookshop with a wide range of genres and titles.</p>
+            <a href="#categories" class="shop-now-btn">Shop Now</a>
+        </div>
+    </section>
+
+    <!-- Book Categories Section -->
+    <section id="categories" class="categories">
+        <h2>Book Categories</h2>
+        <div class="category">
+            <h3>Fiction</h3>
+            <p>Explore the world of fictional adventures, from classic to contemporary.</p>
+        </div>
+        <div class="category">
+            <h3>Non-Fiction</h3>
+            <p>Find a wide selection of biographies, self-help, and more!</p>
+        </div>
+        <div class="category">
+            <h3>Children's Books</h3>
+            <p>Engage young minds with the best in children's literature.</p>
+        </div>
+    </section>
+
+    <!-- About Us Section -->
+    <section id="about" class="about">
+        <h2>About Us</h2>
+        <p>At Book Haven, we are passionate about books and bringing you the best selection at affordable prices. We believe in the power of reading and aim to provide an enjoyable shopping experience for all book lovers.</p>
+    </section>
+
+    <!-- Contact Us Section -->
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <p>If you have any questions or need assistance, feel free to reach out to us!</p>
+        <ul>
+            <li>Email: contact@bookhaven.com</li>
+            <li>Phone: 123-456-7890</li>
+        </ul>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Book Haven - All rights reserved</p>
+    </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
