--- a/index.html
+++ b/index.html
@@ -1,72 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Book Haven - Your Online Bookshop</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ice Cream World</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#categories">Categories</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Welcome to Ice Cream World!</h1>
+  </header>
+  <div class="content">
+    <div class="flavor-section">
+      <h2>Select Your Flavor</h2>
+      <select id="flavorSelect">
+        <option value="vanilla">Vanilla</option>
+        <option value="chocolate">Chocolate</option>
+        <option value="strawberry">Strawberry</option>
+        <option value="mint">Mint</option>
+        <option value="mango">Mango</option>
+      </select>
+      <button id="chooseButton">Choose Flavor</button>
+      <p id="selectedFlavor">You have selected: None</p>
+    </div>
+    <div class="ice-cream-options">
+      <h2>Explore Ice Cream Options</h2>
+      <button class="ice-cream-btn" data-flavor="vanilla">Vanilla</button>
+      <button class="ice-cream-btn" data-flavor="chocolate">Chocolate</button>
+      <button class="ice-cream-btn" data-flavor="strawberry">Strawberry</button>
+      <button class="ice-cream-btn" data-flavor="mint">Mint</button>
+      <button class="ice-cream-btn" data-flavor="mango">Mango</button>
+    </div>
+    <div class="ice-cream-image" id="iceCreamImage">
+      <p>Click a button to see your ice cream!</p>
+    </div>
+  </div>
 
-    <!-- Homepage Banner -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Welcome to Book Haven!</h1>
-            <p>Your favorite online bookshop with a wide range of genres and titles.</p>
-            <a href="#categories" class="shop-now-btn">Shop Now</a>
-        </div>
-    </section>
+  <footer>
+    <p>&copy; 2024 Ice Cream World. All rights reserved.</p>
+  </footer>
 
-    <!-- Book Categories Section -->
-    <section id="categories" class="categories">
-        <h2>Book Categories</h2>
-        <div class="category">
-            <h3>Fiction</h3>
-            <p>Explore the world of fictional adventures, from classic to contemporary.</p>
-        </div>
-        <div class="category">
-            <h3>Non-Fiction</h3>
-            <p>Find a wide selection of biographies, self-help, and more!</p>
-        </div>
-        <div class="category">
-            <h3>Children's Books</h3>
-            <p>Engage young minds with the best in children's literature.</p>
-        </div>
-    </section>
-
-    <!-- About Us Section -->
-    <section id="about" class="about">
-        <h2>About Us</h2>
-        <p>At Book Haven, we are passionate about books and bringing you the best selection at affordable prices. We believe in the power of reading and aim to provide an enjoyable shopping experience for all book lovers.</p>
-    </section>
-
-    <!-- Contact Us Section -->
-    <section id="contact" class="contact">
-        <h2>Contact Us</h2>
-        <p>If you have any questions or need assistance, feel free to reach out to us!</p>
-        <ul>
-            <li>Email: contact@bookhaven.com</li>
-            <li>Phone: 123-456-7890</li>
-        </ul>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 Book Haven - All rights reserved</p>
-    </footer>
-
-    <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
